feature: add deploy.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "redux-paint",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jamesmoriarty.github.io/redux-paint",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
@@ -18,7 +19,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pretty": "npx prettier --write ."
+    "pretty": "npx prettier --write .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "prettier": "2.0.5"
   }
 }
