--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://jamesmoriarty.github.io/redux-paint",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
