--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react-color": "^3.0.4",
+    "@types/react-redux": "^7.1.9",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "typescript": "^4.0.2"
   }
 }
